# audio-transcription-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docker/: .dockerignore  Dockerfile.cpu  Dockerfile.gpu  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
